Fixed: wflow-consoleweb - Property Editor - Button popup dialog missing padding. @7.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/jquery.propertyeditor.css
+++ b/wflow-consoleweb/src/main/webapp/css/jquery.propertyeditor.css
@@ -1175,6 +1175,9 @@ body .boxy-wrapper .autosave input {
 .tooltipster-base .property-description a {
     color:white;
 }
+body .ui-dialog .button_form.ui-dialog-content{
+    padding:10px !important;
+}
 /* mobile styles */
 @media screen and (max-width:680px) {
     .property-label-container {
